增加過濾只處理新建/修改 幾天內的pdf檔

--- a/app.config
+++ b/app.config
@@ -5,6 +5,8 @@
   <appSettings>
     <!--非錯誤時是否寫入Log-->
     <add key="IsWriteLog" value="Y" />
+    <!--過濾僅處理幾天內新建/修改的檔案，0則不作過濾處理-->
+    <add key="LastModifiedDays" value="0" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
